@@ -1,10 +1,22 @@
-
 package org.odk.collect.android.views;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
+import android.content.Context;
+import android.content.SharedPreferences;
+import android.graphics.Typeface;
+import android.preference.PreferenceManager;
+import android.text.Spannable;
+import android.text.SpannableStringBuilder;
+import android.util.Log;
+import android.util.TypedValue;
+import android.view.Gravity;
+import android.view.View;
+import android.view.View.OnLongClickListener;
+import android.widget.LinearLayout;
+import android.widget.ProgressBar;
+import android.widget.ScrollView;
+import android.widget.TextView;
 
+import org.commcare.android.util.MarkupUtil;
 import org.commcare.dalvik.R;
 import org.javarosa.core.model.FormIndex;
 import org.javarosa.core.model.data.IAnswerData;
@@ -19,40 +31,28 @@ import org.odk.collect.android.widgets.QuestionWidget;
 import org.odk.collect.android.widgets.StringWidget;
 import org.odk.collect.android.widgets.WidgetFactory;
 
-import android.content.Context;
-import android.content.SharedPreferences;
-import android.graphics.Typeface;
-import android.preference.PreferenceManager;
-import android.util.Log;
-import android.util.TypedValue;
-import android.view.Gravity;
-import android.view.View;
-import android.view.View.OnLongClickListener;
-import android.widget.LinearLayout;
-import android.widget.ProgressBar;
-import android.widget.ScrollView;
-import android.widget.TextView;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
 
 /**
  * @author carlhartung
  */
-public class ODKView extends ScrollView implements OnLongClickListener, WidgetChangedListener {
+public class ODKView extends ScrollView
+        implements OnLongClickListener, WidgetChangedListener {
 
     // starter random number for view IDs
     private final static int VIEW_ID = 12345;  
     
-    private final static String t = "CLASSNAME";
-    private final static int TEXTSIZE = 21;
-    
-    private Context mContext;
+    private static final String TAG = ODKView.class.getSimpleName();
 
-    private LinearLayout mView;
-    private LinearLayout.LayoutParams mLayout;
-    private ArrayList<QuestionWidget> widgets;
-    private ArrayList<View> dividers;
+    private final LinearLayout mView;
+    private final LinearLayout.LayoutParams mLayout;
+    private final ArrayList<QuestionWidget> widgets;
+    private final ArrayList<View> dividers;
     private ProgressBar mProgressBar;
     
-    private int mQuestionFontsize;
+    private final int mQuestionFontsize;
 
     public final static String FIELD_LIST = "field-list";
     
@@ -64,31 +64,16 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
 
     private boolean mProgressEnabled;
     
-    String mGroupLabel;
+    private final SpannableStringBuilder mGroupLabel;
 
     /**
      * If enabled, we use dividers between question prompts
      */
     private static final boolean SEPERATORS_ENABLED = false;
 
-    public ODKView(Context context, FormEntryPrompt questionPrompt, FormEntryCaption[] groups, WidgetFactory factory) {
-        this(context, new FormEntryPrompt[] {
-            questionPrompt
-        }, groups, factory);
-    }
-    
-    public ODKView(Context context, FormEntryPrompt questionPrompt, FormEntryCaption[] groups, WidgetFactory factory, WidgetChangedListener wcl) {
-        this(context, new FormEntryPrompt[] {
-            questionPrompt
-        }, groups, factory, wcl, false);
-    }
-    
-    public ODKView(Context context, FormEntryPrompt[] questionPrompts, FormEntryCaption[] groups, WidgetFactory factory) {
-        this(context, questionPrompts, groups, factory, null, false);
-    }
-
-
-    public ODKView(Context context, FormEntryPrompt[] questionPrompts, FormEntryCaption[] groups, WidgetFactory factory, WidgetChangedListener wcl, boolean isGroup) {
+    public ODKView(Context context, FormEntryPrompt[] questionPrompts,
+                   FormEntryCaption[] groups, WidgetFactory factory,
+                   WidgetChangedListener wcl) {
         super(context);
         
         if(wcl !=null){
@@ -102,10 +87,8 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         String question_font =
                 settings.getString(PreferencesActivity.KEY_FONT_SIZE, Collect.DEFAULT_FONTSIZE);
 
-        mQuestionFontsize = new Integer(question_font).intValue();
+        mQuestionFontsize = Integer.valueOf(question_font);
         
-        mContext = context;
-
         widgets = new ArrayList<QuestionWidget>();
         dividers = new ArrayList<View>();
 
@@ -113,7 +96,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
 
         mView = (LinearLayout) layout.findViewById(R.id.odkview_layout);
         
-        if(PreferencesActivity.getProgressBarMode(mContext) == ProgressBarMode.ProgressOnly) {
+        if(PreferencesActivity.getProgressBarMode(context) == ProgressBarMode.ProgressOnly) {
             this.mProgressEnabled = true;
         }
 
@@ -131,14 +114,13 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
             LinearLayout barView = new LinearLayout(getContext());
             barView.setOrientation(LinearLayout.VERTICAL);
             barView.setGravity(Gravity.BOTTOM);
-            barView.addView((View) mProgressBar);
+            barView.addView(mProgressBar);
             mView.addView(barView, barLayout);
         }
 
         mLayout =
             new LinearLayout.LayoutParams(LinearLayout.LayoutParams.FILL_PARENT,
                     LinearLayout.LayoutParams.WRAP_CONTENT);
-        //mLayout.setMargins(10, 0, 10, 0);
 
         //Figure out if we share hint text between questions
         String hintText = null;
@@ -192,7 +174,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
             }
 
             widgets.add(qw);
-            mView.addView((View) qw, mLayout);
+            mView.addView(qw, mLayout);
             
             qw.setChangedListener(this);
         }
@@ -202,7 +184,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         addView(layout);
     }
     
-    public void removeQuestionFromIndex(int i){
+    void removeQuestionFromIndex(int i){
         int dividerIndex = Math.max(i - 1, 0);
 
         if (dividerIndex < dividers.size()) {
@@ -211,7 +193,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
 
         if (i < widgets.size()) {
-            mView.removeView((View) widgets.get(i));
+            mView.removeView(widgets.get(i));
             widgets.remove(i);
         }
     }
@@ -223,12 +205,11 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         Collections.reverse(indexes);
         
         for(int i=0; i< indexes.size(); i++){
-            removeQuestionFromIndex(indexes.get(i).intValue());
+            removeQuestionFromIndex(indexes.get(i));
         }
     }
     
     public void addQuestionToIndex(FormEntryPrompt fep, WidgetFactory factory, int i){
-
         View divider = new View(getContext());
         if(SEPERATORS_ENABLED) {
             divider.setBackgroundResource(android.R.drawable.divider_horizontal_bright);
@@ -254,7 +235,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
 //        }
 
         widgets.add(i, qw);
-        mView.addView((View) qw, getViewIndex(2 * i + mViewBannerCount), mLayout);
+        mView.addView(qw, getViewIndex(2 * i + mViewBannerCount), mLayout);
         
         qw.setChangedListener(this);
     }
@@ -275,9 +256,6 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         return answers;
     }
     
-    /* (non-Javadoc)
-     * @see android.widget.LinearLayout#onMeasure(int, int)
-     */
     @Override
     protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec) {
         int newHeight = MeasureSpec.getSize(heightMeasureSpec);
@@ -291,16 +269,6 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
         
         super.onMeasure(widthMeasureSpec, heightMeasureSpec);
-                
-//        double change = ((this.getMeasuredHeight() * 1.0 - gmh) / this.getMeasuredHeight()); 
-//        System.out.println("Old: " + gmh + ". New: "+ this.getMeasuredHeight() + ". CurrentHeight: " + height);
-//        
-//        if(gmh == -1 || gmh == 0 || change > .2) {
-//            //If the view size change has changed by more than 20% 
-//            if(mHelpText != null) {
-//                mHelpText.updateMaxHeight((this.getMeasuredHeight() - this.getScrollY())/ 3);
-//            }
-//        }
     }
     
     private void updateConstraintRelevancies(){
@@ -324,21 +292,29 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
     /**
      * Returns the hierarchy of groups to which the question belongs.
      */
-    private String deriveGroupText(FormEntryCaption[] groups) {
-        StringBuffer s = new StringBuffer("");
+    private SpannableStringBuilder deriveGroupText(FormEntryCaption[] groups) {
+        SpannableStringBuilder s = new SpannableStringBuilder("");
         String t = "";
+        String m = "";
         int i;
         // list all groups in one string
         for (FormEntryCaption g : groups) {
             i = g.getMultiplicity() + 1;
             t = g.getLongText();
-            if (t != null) {
-                s.append(t);
-                if (g.repeats() && i > 0) {
-                    s.append(" (" + i + ")");
-                }
-                s.append(" > ");
+            m = g.getMarkdownText();
+
+            if(m != null){
+                Spannable markdownSpannable = MarkupUtil.returnMarkdown(getContext(), m);
+                s.append(markdownSpannable);
             }
+            else if (t != null) {
+                s.append(t);
+            }
+
+            if (g.repeats() && i > 0) {
+                s.append(" (" + i + ")");
+            }
+            s.append(" > ");
         }
         
         //remove the trailing " > "
@@ -346,24 +322,21 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
             s.delete(s.length() - 2, s.length());
         }
         
-        return s.toString();
+        return s;
     }
     
     
     /**
      * Ugh, the coupling here sucks, but this returns the group label
      * to be used for this odk view. 
-     * 
-     * @return
      */
-    public String getGroupLabel() {
+    public SpannableStringBuilder getGroupLabel() {
         return mGroupLabel;
     }
     
     private void addHintText(String hintText) {
         if (hintText != null && !hintText.equals("")) {
             TextView mHelpText = new TextView(getContext());
-            mHelpText = new TextView(getContext());
             mHelpText.setTextSize(TypedValue.COMPLEX_UNIT_DIP, mQuestionFontsize - 3);
             mHelpText.setPadding(0, -5, 0, 7);
             // wrap to the widget of view
@@ -375,9 +348,6 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
             mView.addView(mHelpText, mLayout);
         }
     }
-    
-    
-
 
     public void setFocus(Context context) {
         if (widgets.size() > 0) {
@@ -385,14 +355,10 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
     }
 
-
     /**
      * Called when another activity returns information to answer this question.
-     * 
-     * @param answer
      */
     public void setBinaryData(Object answer) {
-        
         boolean set = false;
         for (QuestionWidget q : widgets) {
             if (q instanceof IBinaryWidget) {
@@ -405,17 +371,14 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
 
         if (!set) {
-            Log.w(t, "Attempting to return data to a widget or set of widgets not looking for data");
+            Log.w(TAG, "Attempting to return data to a widget or set of widgets not looking for data");
                      
             for (QuestionWidget q : widgets) {
                 if (q instanceof IBinaryWidget) {
                     ((IBinaryWidget) q).setBinaryData(answer);
-                    set = true;
                     break;
                 }
             }
-            
-            
         }
     }
 
@@ -434,16 +397,10 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
     }
 
-
     public ArrayList<QuestionWidget> getWidgets() {
         return widgets;
     }
 
-
-    /*
-     * (non-Javadoc)
-     * @see android.view.View#setOnFocusChangeListener(android.view.View.OnFocusChangeListener)
-     */
     @Override
     public void setOnFocusChangeListener(OnFocusChangeListener l) {
         for (int i = 0; i < widgets.size(); i++) {
@@ -452,21 +409,11 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
     }
 
-
-    /*
-     * (non-Javadoc)
-     * @see android.view.View.OnLongClickListener#onLongClick(android.view.View)
-     */
     @Override
     public boolean onLongClick(View v) {
         return false;
     }
     
-
-    /*
-     * (non-Javadoc)
-     * @see android.view.View#cancelLongPress()
-     */
     @Override
     public void cancelLongPress() {
         super.cancelLongPress();
@@ -475,21 +422,13 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
     }
 
-    /*
-     * (non-Javadoc)
-     * @see org.odk.collect.android.listeners.WidgetChangedListener#widgetEntryChanged()
-     */
     @Override
     public void widgetEntryChanged() {
-        
         updateConstraintRelevancies();
-        
         updateLastQuestion();
-        
     }
     
-    public void updateLastQuestion(){
-
+    void updateLastQuestion(){
         StringWidget last = null;
         
         for(QuestionWidget q: widgets){
@@ -532,5 +471,4 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
         return questionIndex;
     }
-    
 }
