@@ -58,30 +58,18 @@ public class ResizingImageView extends ImageView {
         this.bigImageURI = bigImageURI;
     }
 
-    /*
-     * (non-Javadoc)
-     * @see android.view.View#onTouchEvent(android.view.MotionEvent)
-     */
     @Override
     public boolean onTouchEvent(MotionEvent e) {
         scaleGestureDetector.onTouchEvent(e);
         return gestureDetector.onTouchEvent(e);
     }
 
-    /*
-     * (non-Javadoc)
-     * @see android.widget.ImageView#setMaxWidth(int)
-     */
     @Override
     public void setMaxWidth(int maxWidth) {
         super.setMaxWidth(maxWidth);
         mMaxWidth = maxWidth;
     }
 
-    /*
-     * (non-Javadoc)
-     * @see android.widget.ImageView#setMaxHeight(int)
-     */
     @Override
     public void setMaxHeight(int maxHeight) {
         super.setMaxHeight(maxHeight);
@@ -89,19 +77,11 @@ public class ResizingImageView extends ImageView {
     }
 
     private class GestureListener extends GestureDetector.SimpleOnGestureListener {
-        /*
-         * (non-Javadoc)
-         * @see android.view.GestureDetector.SimpleOnGestureListener#onDown(android.view.MotionEvent)
-         */
         @Override
         public boolean onDown(MotionEvent e) {
             return true;
         }
 
-        /*
-         * (non-Javadoc)
-         * @see android.view.GestureDetector.SimpleOnGestureListener#onDoubleTap(android.view.MotionEvent)
-         */
         @Override
         public boolean onDoubleTap(MotionEvent e) {
             getSuggestedMinimumHeight();
@@ -111,10 +91,6 @@ public class ResizingImageView extends ImageView {
     }
 
     private class ScaleListener extends ScaleGestureDetector.SimpleOnScaleGestureListener {
-        /*
-         * (non-Javadoc)
-         * @see android.view.ScaleGestureDetector.SimpleOnScaleGestureListener#onScale(android.view.ScaleGestureDetector)
-         */
         @Override
         public boolean onScale(ScaleGestureDetector detector) {
             scaleFactor *= detector.getScaleFactor();
@@ -159,7 +135,6 @@ public class ResizingImageView extends ImageView {
     }
 
     private Pair<Integer,Integer> getWidthHeight(int widthMeasureSpec, int heightMeasureSpec, double imageScaleFactor){
-
         int maxWidth = mMaxWidth;
         int maxHeight = mMaxHeight;
 
@@ -169,13 +144,10 @@ public class ResizingImageView extends ImageView {
         if (MeasureSpec.getMode(heightMeasureSpec) == MeasureSpec.AT_MOST) {
             maxHeight = Math.min(MeasureSpec.getSize(heightMeasureSpec), mMaxHeight);
         }
-        return new Pair<Integer,Integer>(new Double(maxWidth * imageScaleFactor).intValue(), new Double(maxHeight * imageScaleFactor).intValue());
+        return new Pair<Integer,Integer>(Double.valueOf(maxWidth * imageScaleFactor).intValue(), Double.valueOf(maxHeight * imageScaleFactor).intValue());
     }
 
     /*
-     * (non-Javadoc)
-     * @see android.widget.ImageView#onMeasure(int, int)
-     * 
      * The meat and potatoes of the class. Determines what algorithm to use
      * to resize the image based on the KEY_RESIZE preference. Currently can be
      * "full", "width", or "none". Will always preserve aspect ratio. 
